--- a/StarterProject/.project
+++ b/StarterProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StarterProject</name>
+	<name>StarterProject2</name>
 	<comment></comment>
 	<projects>
 	</projects>
