--- a/StarterProject/.settings/org.eclipse.core.resources.prefs
+++ b/StarterProject/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/geometry/Drawing.java=UTF-8
 encoding//src/geometry/Test.java=UTF-8
 encoding//src/introduction/Variables.java=UTF-8
